# vaultz

./: .gitignore  Cargo.toml  README.md  coverage.json  eslint.config.js  generator.html  index.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  bump-version.yml  ci.yml  coverage.yml
.husky/: pre-commit
__mocks__/@tauri-apps/: plugin-clipboard-manager.ts  plugin-dialog.ts
coverage/: coverage-summary.json
scripts/: bump-version.sh  gen_banner.py  migrate-pass.sh  release.sh
scripts/pmcli/: Cargo.toml
scripts/pmcli/src/: constants.rs  db.rs  input.rs  main.rs  util.rs
scripts/pmcli/src/commands/: add.rs  copy.rs  delete.rs  export.rs  import.rs  list.rs  mod.rs  show.rs  util.rs
scripts/verify-vault/: Cargo.toml
scripts/verify-vault/src/: main.rs
src/: createOverlayRoot.test.tsx  createOverlayRoot.tsx  generatorMain.tsx  global.css.ts  main.tsx  overlay.css.ts  overlayMain.tsx  setupTests.ts  testUtils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  crypto.rs  lib.rs  main.rs  session_artifacts.rs  shortcuts.rs  state.rs  window_helpers.rs
src-tauri/src/commands/: clipboard.rs  folders.rs  generated_passwords.rs  license.rs  mod.rs  overlay.rs  passwords.rs  settings.rs  vault.rs
src-tauri/src/commands/session/: auth.rs  master.rs  mod.rs  setup.rs
src-tauri/src/database/: favicon.rs  folders.rs  generated_passwords.rs  license.rs  master.rs  mod.rs  models.rs  passwords.rs  settings.rs
src/atoms/: derived.ts  folders.ts  init.test.ts  init.ts  license.ts  passwords.ts  session.ts  ui.ts
src/components/App/: index.test.tsx  index.tsx
src/components/FaviconAvatar/: index.css.ts  index.test.tsx  index.tsx
src/components/GeneratedPasswordItem/: index.css.ts  index.test.tsx  index.tsx
src/components/GlobalModals/: index.test.tsx  index.tsx
src/components/PasswordCard/: index.css.ts  index.test.tsx  index.tsx
src/components/PasswordGenerator/: index.css.ts  index.test.tsx  index.tsx
src/components/Toast/: index.css.ts  index.test.tsx  index.tsx
src/components/VaultLockedPanel/: index.css.ts  index.test.tsx  index.tsx
src/constants/: clipboard.ts  events.test.ts  events.ts  folders.ts  overlay.test.ts  overlay.ts  vault.ts
src/hooks/: useClipboard.test.ts  useClipboard.ts  useCreateFolder.ts  useCreateMasterPassword.test.ts  useCreateMasterPassword.ts  useCreatePassword.test.ts  useCreatePassword.ts  useDashboard.test.ts  useDashboard.ts  useDashboardKeys.test.ts  useDashboardKeys.ts  useDeepLink.test.ts  useDeepLink.ts  useFaviconPicker.test.ts  useFaviconPicker.ts  useFolderManager.test.ts  useFolderManager.ts  useGeneratedPasswordsPage.test.ts  useGeneratedPasswordsPage.ts  useGeneratedPasswordsPageKeys.test.ts  useGeneratedPasswordsPageKeys.ts  useGlobalKeyboard.test.ts  useGlobalKeyboard.ts  useKeyboardNav.test.ts  useKeyboardNav.ts  useLatestArgs.test.ts  useLatestArgs.ts  useLimitCheck.ts  useLogin.test.ts  useLogin.ts  useLoginPage.test.ts  useLoginPage.ts  useOpenCreateEntryPrefilled.test.ts  useOpenCreateEntryPrefilled.ts  useOverlayGenerator.test.ts  useOverlayGenerator.ts  useOverlayGeneratorKeys.test.ts  useOverlayGeneratorKeys.ts  useOverlaySearch.test.ts  useOverlaySearch.ts  (+20 more)
src/pages/Dashboard/: index.css.ts  index.test.tsx  index.tsx
src/pages/GeneratedPasswordsPage/: index.css.ts  index.test.tsx  index.tsx
src/pages/LoginPage/: index.css.ts  index.test.tsx  index.tsx
src/services/: sessionService.test.ts  sessionService.ts  storageService.test.ts  storageService.ts
src/store/: atoms.async.test.ts  atoms.test.ts  atoms.ts  folders.tsx  index.tsx  license.tsx  passwords.tsx  session.tsx
src/styles/: shared.css.ts  theme.css.ts
src/types/: index.ts  license.ts
src/utils/: avatar.test.ts  avatar.ts  faviconLookup.test.ts  faviconLookup.ts  keyboard.test.ts  keyboard.ts  passwordGenerator.ts  recordGeneratedPassword.test.ts  recordGeneratedPassword.ts  relativeTime.test.ts  relativeTime.ts  url.test.ts  url.ts
vaultz-core/: Cargo.toml
vaultz-core/src/: crypto.rs  db_core.rs  lib.rs  models.rs
(+53 files in other folders)
