[package]
name = "vaultz"
version = "1.0.9"
description = "Local-first desktop password manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
aes-gcm = "0.10"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
gethostname = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

